[tool.poetry]
name = "vantiqapitest"
version = "0.1.0"
description = ""
authors = ["IoriGunji-Vantiq <igunji@vantiq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.23.2"
gunicorn = "^21.2.0"
fastapi = "^0.101.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
